--- a/src/main/resources/com/example/musicmaniaapplication/main-view.fxml
+++ b/src/main/resources/com/example/musicmaniaapplication/main-view.fxml
@@ -2,13 +2,60 @@
 
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="550.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <AnchorPane layoutX="63.0" layoutY="-9.0" prefHeight="550.0" prefWidth="220.0" style="-fx-background-color: #0b194a;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0" />
-      <AnchorPane style="-fx-background-color: #c3c8d9;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <AnchorPane layoutX="63.0" layoutY="-9.0" prefHeight="550.0" prefWidth="220.0" style="-fx-background-color: #378a4c;" styleClass="sidebar" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <children>
+            <VBox fx:id="menuItems" alignment="TOP_CENTER" layoutX="25.0" layoutY="137.0" prefHeight="396.0" prefWidth="170.0" spacing="20.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="137.0">
+               <children>
+                  <Button fx:id="dashboardButton" mnemonicParsing="false" onAction="#handleDashboardButton" prefWidth="200.0" style="-fx-background-color: #8dbd9a;" styleClass="menu-buttons" text="Dashboard">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
+                  <Button fx:id="createOrderButton" mnemonicParsing="false" onAction="#handleCreateOrderButton" prefWidth="200.0" style="-fx-background-color: #8dbd9a;" styleClass="menu-buttons" text="Create Order">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
+                  <Button fx:id="productInventoryButton" mnemonicParsing="false" onAction="#handleProductInventoryButton" prefWidth="200.0" style="-fx-background-color: #8dbd9a;" styleClass="menu-buttons" text="Product Inventory">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
+                  <Button fx:id="orderHistoryButton" layoutX="10.0" layoutY="60.0" mnemonicParsing="false" onAction="#handleOrderHistoryButton" prefWidth="200.0" style="-fx-background-color: #8dbd9a;" styleClass="menu-buttons" text="Order History">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <font>
+                        <Font size="13.0" />
+                     </font></Button>
+                  <Button fx:id="logoutButton" layoutX="10.0" layoutY="187.0" mnemonicParsing="false" onAction="#handleLogoutButton" prefWidth="200.0" style="-fx-background-color: #8dbd9a;" styleClass="menu-buttons" text="Logout">
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
+                     <font>
+                        <Font size="13.0" />
+                     </font>
+                     <VBox.margin>
+                        <Insets top="120.0" />
+                     </VBox.margin>
+                  </Button>
+               </children>
+            </VBox>
+            <ImageView fx:id="logo" fitHeight="108.0" fitWidth="112.0" layoutX="55.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="54.0" AnchorPane.rightAnchor="54.0" AnchorPane.topAnchor="10.0" />
+         </children></AnchorPane>
+      <AnchorPane style="-fx-background-color: #8dbd9a;" styleClass="main-screen" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
             <Label fx:id="username" layoutX="9.0" layoutY="8.0" text="Welcome Anthony" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
                <font>
