--- a/src/main/resources/com/example/musicmaniaapplication/main-view.fxml
+++ b/src/main/resources/com/example/musicmaniaapplication/main-view.fxml
@@ -55,30 +55,6 @@
             </VBox>
             <ImageView fx:id="logo" fitHeight="108.0" fitWidth="112.0" layoutX="55.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="54.0" AnchorPane.rightAnchor="54.0" AnchorPane.topAnchor="10.0" />
          </children></AnchorPane>
-      <AnchorPane style="-fx-background-color: #8dbd9a;" styleClass="main-screen" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <children>
-            <Label fx:id="username" layoutX="9.0" layoutY="8.0" text="Welcome Anthony" AnchorPane.leftAnchor="20.0" AnchorPane.topAnchor="20.0">
-               <font>
-                  <Font size="32.0" />
-               </font>
-            </Label>
-            <Label fx:id="role" layoutX="23.0" layoutY="55.0" text="Your role is Sales" AnchorPane.topAnchor="55.0">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-            </Label>
-            <Label fx:id="currentTime" layoutX="23.0" layoutY="80.0" text="It is now 04-09-2023 12:00">
-               <font>
-                  <Font size="16.0" />
-               </font>
-               <padding>
-                  <Insets top="10.0" />
-               </padding>
-            </Label>
-         </children>
-      </AnchorPane>
+      <AnchorPane fx:id="mainContent" style="-fx-background-color: #8dbd9a;" styleClass="main-screen" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="220.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
    </children>
 </AnchorPane>
