--- a/src/main/resources/com/example/musicmaniaapplication/css/style.css
+++ b/src/main/resources/com/example/musicmaniaapplication/css/style.css
@@ -1,7 +1,3 @@
-.button {
-    -fx-background-color: lightblue; /* Set your desired background color */
-}
-
 .sidebar {
     -fx-background-color: #378a4c;
 }
@@ -12,4 +8,8 @@
 
 .menu-buttons {
     -fx-background-color: #8dbd9a;
+}
+
+.active-button {
+    -fx-background-color: #ddf1e0;
 }
