--- a/src/main/resources/com/example/musicmaniaapplication/add-product-dialog.fxml
+++ b/src/main/resources/com/example/musicmaniaapplication/add-product-dialog.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.control.cell.*?>
 <?import javafx.scene.layout.*?>
@@ -47,11 +48,17 @@
          <TextField fx:id="productQuantity" onTextChange="#quantityOnChange" />
       </children>
    </HBox>
-   <Label fx:id="quantityErrorMessage" layoutX="88.0" layoutY="329.0" textFill="RED" />
-    <HBox layoutX="18.0" layoutY="430.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
+   <Label fx:id="quantityErrorMessage" layoutX="89.0" layoutY="329.0" textFill="RED" />
+    <HBox layoutX="24.0" layoutY="355.0" spacing="10.0" AnchorPane.leftAnchor="24.0">
         <children>
-            <Button mnemonicParsing="false" fx:id="addToOrder" disable="true" onAction="#addToOrderClick" text="Add to Order" />
+            <Button fx:id="addToOrder" disable="true" mnemonicParsing="false" onAction="#addToOrderClick" text="Add to Order" />
             <Button mnemonicParsing="false" onAction="#cancelClick" text="Cancel" />
         </children>
+      <opaqueInsets>
+         <Insets />
+      </opaqueInsets>
+      <padding>
+         <Insets bottom="20.0" />
+      </padding>
     </HBox>
 </AnchorPane>
