--- a/src/main/resources/com/example/musicmaniaapplication/login.fxml
+++ b/src/main/resources/com/example/musicmaniaapplication/login.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="430.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane prefHeight="430.0" prefWidth="600.0" style="-fx-background-color: #8dbd9a;" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1">
    <ImageView fx:id="logo" fitHeight="87.0" fitWidth="102.0" layoutX="249.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="249.0" AnchorPane.rightAnchor="249.0" AnchorPane.topAnchor="14.0" />
 
     <Label layoutX="216.0" layoutY="100.0" text="Music Mania">
@@ -26,6 +26,9 @@
    <TextField fx:id="username" layoutX="230.0" layoutY="229.0" text="andrew" />
    <Label layoutX="230.0" layoutY="272.0" text="Password" />
    <PasswordField fx:id="passwordField" layoutX="230.0" layoutY="292.0" onTextChange="#handlePasswordChange" text="andrew1@" />
-   <Button fx:id="loginButton" disable="true" layoutX="230.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleSubmitButtonAction" prefHeight="25.0" prefWidth="149.0" text="Login" />
+   <Button fx:id="loginButton" disable="true" layoutX="230.0" layoutY="343.0" mnemonicParsing="false" onAction="#handleSubmitButtonAction" prefHeight="25.0" prefWidth="149.0" style="-fx-background-color: #1d5b2f;" text="Login" textFill="WHITE">
+      <font>
+         <Font name="System Bold" size="12.0" />
+      </font></Button>
 
 </AnchorPane>
