--- a/src/main/resources/com/example/musicmaniaapplication/create-order.fxml
+++ b/src/main/resources/com/example/musicmaniaapplication/create-order.fxml
@@ -36,6 +36,12 @@
                         <PropertyValueFactory property="quantity" />
                     </cellValueFactory>
                 </TableColumn>
+                <TableColumn fx:id="productName" minWidth="220.0" prefWidth="75.0" text="Name">
+                </TableColumn>
+                <TableColumn fx:id="category" minWidth="120.0" prefWidth="75.0" text="Category">
+                </TableColumn>
+                <TableColumn fx:id="price" minWidth="100.0" prefWidth="75.0" text="Price">
+                </TableColumn>
             </columns>
         </TableView>
         <HBox layoutX="18.0" layoutY="430.0" spacing="10.0" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0">
