fixed quantity issue and text

--- a/src/main/resources/com/example/musicmaniaapplication/create-product-dialog.fxml
+++ b/src/main/resources/com/example/musicmaniaapplication/create-product-dialog.fxml
@@ -16,7 +16,7 @@
             <HBox spacing="15.0">
                <children>
                   <Button mnemonicParsing="false" onAction="#createButtonClick" text="Create" />
-                  <Button mnemonicParsing="false" onAction="#closeButtonClick" text="Create" />
+                  <Button mnemonicParsing="false" onAction="#closeButtonClick" text="Close" />
                </children>
             </HBox>
          </children>
